<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright (c) 2020 ArkX OS Authors. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.arkx.framework</groupId>
    <artifactId>arkx-framework</artifactId>

    <name>arkx-framework</name>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <url>https://www.arkx.io</url>

    <properties>
        <!-- 项目版本号，revision属性用于子模块版本控制 -->
        <revision>0.3.0</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <source>21</source>
        <target>21</target>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
	</properties>

	<modules>
		<module>arkx-dependencies</module>
		<module>arkx-parent</module>
		<module>arkx-preloader</module>
		<module>arkx-commons</module>
		<module>arkx-enum-starter</module>
		<module>arkx-ip2region-starter</module>
		<module>arkx-data</module>
		<module>arkx-boot</module>
		<module>arkx-sidecar</module>
		<module>arkx-cloud</module>
		<module>arkx-quartz</module>
        <module>arkx-boot-starter</module>
		<module>arkx-cosyui</module>
		<module>arkx-performance-monitor</module>
<!--		<module>arkxos-it-test</module>-->
		<module>arkx-core</module>
		<module>arkx-boot-dependencies</module>
        <module>arkx-commons/arkx-commons-security</module>
        <!--		<module>arkx-data/arkx-data-jdbc</module>-->
	</modules>



	<!--nexus 私有仓库发布地址-->
	<!--<distributionManagement>
		<repository>
			<id>maven-releases</id>
			<url>http://192.168.7.245:8081/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>maven-snapshots</id>
			<url>http://192.168.7.245:8081/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>-->
	<!--云效私有仓库发布地址-->
<!--	<distributionManagement>-->
<!--		&lt;!&ndash;maven的settings.xml文件中设置<server>标签&ndash;&gt;-->
<!--		<repository>-->
<!--			<id>rdc-releases</id>-->
<!--			<url>https://repo.rdc.aliyun.com/repository/126334-release-hl3JHL/</url>-->
<!--		</repository>-->
<!--		<snapshotRepository>-->
<!--			<id>rdc-snapshots</id>-->
<!--			<url>https://repo.rdc.aliyun.com/repository/126334-snapshot-k0fTE8/</url>-->
<!--		</snapshotRepository>-->
<!--	</distributionManagement>-->
<!--	<repositories>-->
<!--		<repository>-->
<!--			<id>spring-milestones</id>-->
<!--			<name>Spring Milestones</name>-->
<!--			<url>https://repo.spring.io/milestone</url>-->
<!--			<snapshots>-->
<!--				<enabled>false</enabled>-->
<!--			</snapshots>-->
<!--		</repository>-->
<!--		<repository>-->
<!--			<id>bintray-release</id>-->
<!--			<name>oss-jfrog-artifactory-release</name>-->
<!--			<url>-->
<!--				https://oss.jfrog.org/artifactory/oss-release-local-->
<!--			</url>-->
<!--		</repository>-->
<!--	</repositories>-->


    <profiles>
        <profile>
            <id>cloud</id>
            <properties>
                <!-- 环境标识，需要与配置文件的名称相对应 -->
                <profiles.active>dev</profiles.active>
                <nacos.username>nacos</nacos.username>
                <nacos.password>nacos</nacos.password>
            </properties>
            <activation>
                <!-- 默认环境 -->
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>boot</id>
            <modules>
<!--                <module>arkxos-boot</module>-->
            </modules>
        </profile>
    </profiles>

	<!-- 环境 -->
<!--	<profiles>-->
<!--		&lt;!&ndash; 本地 &ndash;&gt;-->
<!--		<profile>-->
<!--			<id>local</id>-->
<!--			<properties>-->
<!--				&lt;!&ndash;当前环境&ndash;&gt;-->
<!--				<profile.name>local</profile.name>-->
<!--				&lt;!&ndash;Nacos配置中心地址&ndash;&gt;-->
<!--				<config.server-addr>127.0.0.1:8848</config.server-addr>-->
<!--				&lt;!&ndash;Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<config.namespace>rapidark_cloud_local</config.namespace>-->
<!--				&lt;!&ndash;Nacos服务发现地址&ndash;&gt;-->
<!--				<discovery.server-addr>127.0.0.1:8848</discovery.server-addr>-->
<!--				&lt;!&ndash;Nacos服务发现命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<discovery.namespace>rapidark_cloud_local</discovery.namespace>-->
<!--			</properties>-->
<!--		</profile>-->
<!--		&lt;!&ndash; 开发 本地中间件&ndash;&gt;-->
<!--		<profile>-->
<!--			<id>dev-local</id>-->
<!--			<activation>-->
<!--				&lt;!&ndash;默认激活配置&ndash;&gt;-->
<!--				<activeByDefault>true</activeByDefault>-->
<!--			</activation>-->
<!--			<properties>-->
<!--				&lt;!&ndash;当前环境&ndash;&gt;-->
<!--				<profile.name>dev-local</profile.name>-->
<!--				&lt;!&ndash;Nacos配置中心地址&ndash;&gt;-->
<!--				<config.server-addr>http://nacos.example.rapidark.com:8848</config.server-addr>-->
<!--				&lt;!&ndash;Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<config.namespace>rapidark_cloud_local</config.namespace>-->
<!--				&lt;!&ndash;Nacos服务发现地址&ndash;&gt;-->
<!--				<discovery.server-addr>http://nacos.example.rapidark.com:8848</discovery.server-addr>-->
<!--				&lt;!&ndash;Nacos服务发现命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<discovery.namespace>rapidark_cloud_local</discovery.namespace>-->
<!--			</properties>-->
<!--		</profile>-->
<!--		&lt;!&ndash; 开发-外网中间件 &ndash;&gt;-->
<!--		<profile>-->
<!--			<id>dev</id>-->
<!--			<activation>-->
<!--				&lt;!&ndash;默认激活配置&ndash;&gt;-->
<!--				<activeByDefault>true</activeByDefault>-->
<!--			</activation>-->
<!--			<properties>-->
<!--				&lt;!&ndash;当前环境&ndash;&gt;-->
<!--				<profile.name>dev</profile.name>-->
<!--				&lt;!&ndash;Nacos配置中心地址&ndash;&gt;-->
<!--				<config.server-addr>http://nacos.example.rapidark.com:8848</config.server-addr>-->
<!--				&lt;!&ndash;Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<config.namespace>rapidark_cloud_local</config.namespace>-->
<!--				&lt;!&ndash;Nacos服务发现地址&ndash;&gt;-->
<!--				<discovery.server-addr>http://nacos.example.rapidark.com:8848</discovery.server-addr>-->
<!--				&lt;!&ndash;Nacos服务发现命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<discovery.namespace>rapidark_cloud_local</discovery.namespace>-->
<!--			</properties>-->
<!--		</profile>-->
<!--		&lt;!&ndash; 测试 &ndash;&gt;-->
<!--		<profile>-->
<!--			<id>test</id>-->
<!--			<properties>-->
<!--				&lt;!&ndash;当前环境&ndash;&gt;-->
<!--				<profile.name>test</profile.name>-->
<!--				&lt;!&ndash;Nacos配置中心地址&ndash;&gt;-->
<!--				<config.server-addr>106.12.176.108:8848</config.server-addr>-->
<!--				&lt;!&ndash;Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<config.namespace></config.namespace>-->
<!--				&lt;!&ndash;Nacos服务发现地址&ndash;&gt;-->
<!--				<discovery.server-addr>106.12.176.108:8848</discovery.server-addr>-->
<!--				&lt;!&ndash;Nacos服务发现命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<discovery.namespace></discovery.namespace>-->
<!--			</properties>-->
<!--		</profile>-->
<!--		&lt;!&ndash; 预发布 &ndash;&gt;-->
<!--		<profile>-->
<!--			<id>uat</id>-->
<!--			<properties>-->
<!--				&lt;!&ndash;当前环境&ndash;&gt;-->
<!--				<profile.name>uat</profile.name>-->
<!--				&lt;!&ndash;Nacos配置中心地址&ndash;&gt;-->
<!--				<config.server-addr>172.16.253.213:8848</config.server-addr>-->
<!--				&lt;!&ndash;Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<config.namespace>uat</config.namespace>-->
<!--				&lt;!&ndash;Nacos服务发现地址&ndash;&gt;-->
<!--				<discovery.server-addr>172.16.253.213:8848</discovery.server-addr>-->
<!--				&lt;!&ndash;Nacos服务发现命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<discovery.namespace>uat</discovery.namespace>-->
<!--			</properties>-->
<!--		</profile>-->
<!--		&lt;!&ndash; 生产 &ndash;&gt;-->
<!--		<profile>-->
<!--			<id>online</id>-->
<!--			<properties>-->
<!--				&lt;!&ndash;当前环境,生产环境为空&ndash;&gt;-->
<!--				<profile.name>online</profile.name>-->
<!--				&lt;!&ndash;Nacos配置中心地址&ndash;&gt;-->
<!--				<config.server-addr>172.16.253.213:8848</config.server-addr>-->
<!--				&lt;!&ndash;Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<config.namespace>online</config.namespace>-->
<!--				&lt;!&ndash;Nacos服务发现地址&ndash;&gt;-->
<!--				<discovery.server-addr>172.16.253.213:8848</discovery.server-addr>-->
<!--				&lt;!&ndash;Nacos服务发现命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空&ndash;&gt;-->
<!--				<discovery.namespace>online</discovery.namespace>-->
<!--			</properties>-->
<!--		</profile>-->
<!--		&lt;!&ndash; 云效私有仓库 &ndash;&gt;-->
<!--		<profile>-->
<!--			<id>rdc-private-repo</id>-->
<!--			<repositories>-->
<!--				<repository>-->
<!--					<id>rdc-releases</id>-->
<!--					<url>https://repo.rdc.aliyun.com/repository/126334-release-hl3JHL/</url>-->
<!--				</repository>-->
<!--				<repository>-->
<!--					<id>rdc-snapshots</id>-->
<!--					<url>https://repo.rdc.aliyun.com/repository/126334-snapshot-k0fTE8/</url>-->
<!--				</repository>-->
<!--			</repositories>-->
<!--		</profile>-->
<!--		&lt;!&ndash; nexus 私有仓库 &ndash;&gt;-->
<!--		&lt;!&ndash;<profile>-->
<!--			<id>nexus-private-repo</id>-->
<!--			<repositories>-->
<!--				<repository>-->
<!--					<id>maven-releases</id>-->
<!--					<url>http://192.168.7.245:8081/repository/maven-releases/</url>-->
<!--				</repository>-->
<!--				<repository>-->
<!--					<id>maven-snapshots</id>-->
<!--					<url>http://192.168.7.245:8081/repository/maven-snapshots/</url>-->
<!--				</repository>-->
<!--			</repositories>-->
<!--		</profile>&ndash;&gt;-->
<!--	</profiles>-->
</project>
